update theme config

--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 # Site
 title: OWO
 subtitle:
-description: blog of adolphlwq
-author: adolphlwq
+description: Stay hungry, Stay foolish
+author: AdolphLWQ
 language: en
 timezone:
 avatar: https://avatars0.githubusercontent.com/u/9915368
